language/move-lang/tests/move_check/expansion/named_address_assigned_multiple_times_invalid.move
// Named addresses can only have one unique value
address A = 0x1;
address A = 2;
